4.5 -> 5.0:
    - rse: fix va_copy fallback macros.
    - jbj: rpmdb.c: retrofit HE_s.
    - jbj: rpmte.c: use headerGetExtension.
    - jbj: add HE_s typedef to get rid of alloca baggage.
    - bero: Make rpm2cpio work for packages with payloads other than gzip
    - jbj: change to hRET_t for existing headerGetExtension uses.
    - bero: Add %optional flag on files (packages a file if it is there,
      but doesn't error out if it isn't there)
    - bero: Support multiple %files files per package (%files -f f1,f2,...)
    - bero: Detect Ark Linux as RPMCANONVENDOR
    - rpm.org: have selinux disabled imply RPMTRANS_FLAG_NOCONTEXTS.
    - jbj: plug --rebuilddb memory leaks. headerGetExtension() est arrive!
    - jbj: fix: set FD_CLOEXEC in Open() and fdDup().
    - jbj: eliminate rpmMessage, rpmlog instead.
    - jbj: finish eliminating rpmError, rpmlog instead.
    - jbj: switch rpmdbRemove to use headerGetExtension.
    - jbj: switch rpmdbAdd to use headerGetExtension. ~1Mb leaks w --rebuilddb.
    - jbj: fix: headerGetExtension failed to return p.str correctly.
    - jbj: start eliminating rpmError.
    - jbj: fail empty and non-printable manifests.
    - jbj: headerGetExtension: handle lookup failure cases too.
    - jbj: headerGetExtension: include \0 when dup'ing string.
    - jbj: start converting rpmdb.c to use headerGetExtension instead.
    - jbj: expose hRET_t through headerGetExtension prototypes.
    - jbj: unbork/simplify hRET_t indirections, too much acid in the Kool-Aid.
    - jbj: rpmdeps: unhide various CLI options.
    - jbj: rpmdeps: invoke rpm, not /bin/rpm.
    - bero: fix: RPMRC_FAIL, not non-existent RPMRC_BAD, return.
    - jbj: teach headerGetExtension() to allocate all returned data.
    - jbj: attempt using a pedantically correct union for header data.
    - jbj: mark --initdb and --verifydb code paths for destruction.
    - jbj: start making miRE abstract and refcounted.